Show shortcuts in native format where applicable
Instead of statically showing "Ctrl+N" and the sorts in all platforms, display shortcuts in a native way for each.

BUG:425118

--- a/plugins/python/tenscripts/Manual.html
+++ b/plugins/python/tenscripts/Manual.html
@@ -5,7 +5,7 @@
 <head><title>Ten Scripts Plugin Manual</title>
 </head>
 <body>
-<h1 id="ten-scrips">Ten Scrips</h1>
+<h1 id="ten-scripts">Ten Scripts</h1>
 <p>A Script to assign python scripts to one of ten configurable hotkeys.</p>
 <h2 id="basic-usage">Basic Usage</h2>
 <p>Go to <strong>Tools → Scripts → Ten Scripts</strong>.</p>
